volunteer oppurtunities,services,online classes,media coverage sections are  added

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>
       Qause - An interacitve platform for connecting NGOs with volunteers
     </title>
-    
+
     <!-- including google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -31,6 +31,12 @@
     <link rel="stylesheet" href="./styles/index.css" />
     <link rel="stylesheet" href="./styles/navbar.css" />
     <link rel="stylesheet" href="./styles/home.css" />
+    <link rel="stylesheet" href="./styles/ngo_examples.css" />
+    <link rel="stylesheet" href="./styles/volunteer_oppurtunities.css" />
+    <link rel="stylesheet" href="./styles/ngo_services.css" />
+    <link rel="stylesheet" href="./styles/media-coverage1.css" />
+    <link rel="stylesheet" href="./styles/online_classes.css" />
+    <link rel="stylesheet" href="./styles/media-coverage2.css">
   </head>
   <body>
     <!-- Following semantics -->
@@ -51,7 +57,7 @@
 
     <!-- Main  -->
     <main>
-        <!-- section 1 -->
+      <!-- section 1 -->
       <section class="home-section">
         <div class="row grid-container">
           <div class="home-section-content col-7">
@@ -71,13 +77,196 @@
             </div>
           </div>
           <div class="home-section-image col-5">
-            <img src="./assets/header-banner.jpg" alt="" class="" />
+            <img
+              src="./assets/header-banner.jpg"
+              alt="girl"
+              class="img img-fluid"
+            />
           </div>
         </div>
       </section>
 
       <!-- section 2 -->
-      
+      <section class="ngo-examples">
+        <div class="ngo-examples-grid-container row">
+          <div class="ngo-examples-content col-4">
+            <p>2138+ NGOs trust us with their needs</p>
+          </div>
+          <div class="ngo-examples-images col-8">
+            <img
+              src="./assets//ngocount-logo2.png"
+              class="img img-fluid"
+              alt="ngo example"
+            />
+            <img
+              src="./assets//ngocount-logo1.png"
+              class="img img-fluid"
+              alt="ngo example"
+            />
+            <img
+              src="./assets//ngocount-logo3.png"
+              class="img img-fluid"
+              alt="ngo example"
+            />
+            <img
+              src="./assets//ngocount-logo4.png"
+              class="img img-fluid"
+              alt="ngo example"
+            />
+            <img
+              src="./assets//ngocount-logo5.png"
+              class="img img-fluid"
+              alt="ngo example"
+            />
+          </div>
+        </div>
+      </section>
+
+      <!-- section 3 -->
+      <section class="volunteer-oppurtunities">
+        <div class="volunteer-oppurtunities-content col-12">
+          <h1>
+            Online volunteer oppurtunities
+
+            <span class="bg-highlighted">best suited to your interest</span>
+          </h1>
+          <p>
+            Your service to nonprofits will add up to your social portfolio on
+            Qause and can broaden your career horizons.
+          </p>
+        </div>
+        <div class="volunteer-oppurtunities-navigation col-12">
+          <div class="carousel-arrows">
+            <i class="fa-solid fa-circle-arrow-left"></i>
+            <i class="fa-solid fa-circle-arrow-right"></i>
+          </div>
+          <button class="navigation-btn">
+            Explore All <i class="fa-sharp fa-solid fa-arrow-right-long"></i>
+          </button>
+        </div>
+      </section>
+
+      <!-- section 4 -->
+      <section class="ngo-services">
+        <div class="ngo-services-grid-container row">
+          <div class="ngo-services-content col-5">
+            <h1>Are you an NGO looking for</h1>
+            <span class="coloured">a writer?</span>
+            <div class="ngo-services-navigation">
+              <button class="navigation-btn">
+                YES I NEED A VOLUNTEER
+                <i class="fa-sharp fa-solid fa-arrow-right-long"></i>
+              </button>
+            </div>
+          </div>
+          <div class="ngo-services-image-content col-7 row">
+            <img
+              src="./assets/ngolooking-img.png"
+              alt="ngoWomen"
+              class="img img-fluid col-5"
+            />
+            <div class="ngo-message col-7">
+              <p>
+                "I have never felt so empowered to be a part of something bigger
+                than myself. Qause is the ideal social enterprise to find a
+                sense of creativity and purpose. It has given me the chance to
+                give back to my community and grow as a person."
+              </p>
+              <p class="coloured">Nishtha Setia</p>
+              <p class="coloured">Content volunteer at Qause</p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- section 5 -->
+      <section class="media-coverage1">
+        <div class="media-coverage1-grid-container row">
+          <div class="media-coverage1-content col-4">
+            <h1>Over 2138 NGOs got their custom domain on Qause for FREE!</h1>
+            <div class="media-coverage1-input">
+              <input
+                type="text"
+                class="media-coverage1-input-field"
+                placeholder="Get your custom domain name"
+              />
+              <div class="media-coverage1-input-icon">
+                <span><i class="fa-solid fa-magnifying-glass"></i></span>
+              </div>
+            </div>
+            <div class="media-coverage1-navigation">
+              <button class="navigation-btn">
+                Register Now
+                <i class="fa-sharp fa-solid fa-arrow-right-long"></i>
+              </button>
+            </div>
+          </div>
+          <div class="media-coverage1-image col-8">
+            <img
+              src="./assets/qause-custom-domain.png"
+              alt="custom domain"
+              class="img img-fluid"
+            />
+          </div>
+        </div>
+      </section>
+
+      <!-- section 6 -->
+      <section class="online-classes">
+        <div class="online-classes-grid-container row">
+          <div class="online-classes-content col-7">
+            <h1>
+              Giving free online classes to help the less fortunate kids
+              discover their passion.
+            </h1>
+            <p>Get a glimpse of smiling faces of what they love!</p>
+            <div class="online-classes-content-navigation">
+              <button class="navigation-btn navigation-btn-light">
+                Learn more
+              </button>
+            </div>
+          </div>
+          <div class="online-classes-image col-5">
+            <img
+              src="./assets/passionguru-videoimg.svg"
+              alt="online classes image"
+              class="img img-fluid"
+            />
+          </div>
+        </div>
+      </section>
+
+      <!-- section 7 -->
+      <section class="media-coverage2">
+        <div class="media-coverage2-grid-container row">
+          <div class="media-coverage2-header col-12 ">
+            <!-- <div class=""></div> -->
+            <h1 class="media-coverage-heading">Media Coverage</h1>
+            <!-- <div class=""></div> -->
+          </div>
+          <div class="media-coverage2-content col-12 row">
+            <div class="media-coverage2-content-image col-6">
+              <img src="./assets/media-coverage2.jpg" alt="media coverage image" class="img img-fluid">
+            </div>
+            <div class="media-coverage2-content-info col-6">
+              <h1>Creating a Generaiton of Limitless Curious Minds <br> 8th March, 2021</h1>
+              <hr>
+              <p>Qause aims to bridge that fap by hand-holding and providing them phone assistance in their refional language to bring their presence online and enable them to take donations online as well.</p>
+              <span class="coloured">Read Full Article</span>
+            </div>
+          </div>
+          <div class="media-coverage2-navigation col-12">
+            <span><i class="fa-solid fa-chevron-left"></i></span>
+            <span><i class="fa-solid fa-chevron-right"></i></span>
+          </div>
+        </div>
+      </section>
+
+      <!-- section 8 -->
+      <section class="blog">
+        <div class="blog-grid-container">
+        </div>
+      </section>
     </main>
 
     <!-- Including bootstrap script -->
